k8s/home-assistant/home-assistant.yml
apiVersion: v1
kind: Namespace
metadata:
  name: home-automation

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-automation
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      imagePullSecrets:
        - name: regcred
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:0.118.4
          imagePullPolicy: Always
          command:
            - "sh"
          args:
            - "-c"
            - "hass --config /home-automation/k8s/home-assistant/home-assistant-config"
          ports:
            - name: api
              containerPort: 8123
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: api
              scheme: HTTP
            initialDelaySeconds: 60
            failureThreshold: 5
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: api
              scheme: HTTP
            initialDelaySeconds: 60
            failureThreshold: 5
            timeoutSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: api
              scheme: HTTP
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - name: home-assistant-config-volume
              mountPath: /home-automation
            - name: ha-secrets-volume
              mountPath: /home-automation/k8s/home-assistant/home-assistant-config/secrets.yaml
              subPath: yml
            - name: gaming-pc-ssh-secrets-volume
              mountPath: /root/.ssh/id_rsa
              subPath: pub
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true

        - name: app-daemon
          image: acockburn/appdaemon:dev
          imagePullPolicy: Always
          command:
            - sh
          args:
            - "-c"
            - "ln -s /home-automation/k8s/home-assistant/home-assistant-config/appdaemon.yaml /conf/appdaemon.yaml && ln -s /home-automation/k8s/home-assistant/home-assistant-config/apps /conf/apps && ln -s /home-automation/k8s/home-assistant/home-assistant-config/dashboards /conf/dashboards && ./dockerStart.sh"
          ports:
            - name: appdaemon
              containerPort: 5050
              protocol: TCP
          volumeMounts:
            - name: home-assistant-config-volume
              mountPath: /home-automation
            - name: ha-secrets-volume
              mountPath: /conf/secrets.yaml
              subPath: yml

      volumes:
        - name: ha-secrets-volume
          secret:
            secretName: secrets
        - name: ssh-secrets-volume
          secret:
            secretName: ssh
            defaultMode: 0600
        - name: gaming-pc-ssh-secrets-volume
          secret:
            secretName: gaming-pc-public-key
            defaultMode: 0600
        - name: home-assistant-config-volume
          persistentVolumeClaim:
            claimName: home-assistant-pv-claim

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - nuc01

---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-automation
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  ports:
    - name: ps4-port-1
      protocol: UDP
      port: 987
      targetPort: 987
    - name: ps4-port-2
      protocol: TCP
      port: 997
      targetPort: 997
    - name: api
      port: 8123
      protocol: TCP
      targetPort: api
    - name: appdaemon
      port: 5050
      protocol: TCP
      targetPort: appdaemon
  selector:
    app.kubernetes.io/name: home-assistant
