k8s/home-assistant/ingress-prod.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: home-assistant
  namespace: home-automation
spec:
  tls:
    - hosts:
        - $HOME_ASSISTANT_DOMAIN
      secretName: docker-tls
  rules:
    - host: $HOME_ASSISTANT_DOMAIN
      http:
        paths:
          - path:
            backend:
              serviceName: home-assistant
              servicePort: 8123
